kubernetes/wordpress/custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: my-wordpress
    meta.helm.sh/release-namespace: app
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2023-08-23T05:55:06Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: my-wordpress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wordpress
    helm.sh/chart: wordpress-17.0.8
  name: my-wordpress
  namespace: app
  resourceVersion: "8180887"
  uid: fd0ed248-3851-46d8-9ec6-ce363e17e991
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: my-wordpress
            port:
              name: http
        path: /wordpress
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.11.245
